syntax = "proto3";

package api.qycms_bff.web.v1;
import "google/api/annotations.proto";
import  "google/protobuf/timestamp.proto";
option go_package = "github.com/iwinder/qyblog/api/qycms_bff/web/v1;v1";
option java_multiple_files = true;
option java_package = "api.qycms_bff.web.v1";

service QyWebComment {
	rpc CreateQyWebComment (CreateQyWebCommentRequest) returns (CreateQyWebCommentReply){
		option (google.api.http) = {
			post: "/api/web/v1/comment",
			body:"*"
		};
	};
	rpc UpdateQyWebComment (UpdateQyWebCommentRequest) returns (UpdateQyWebCommentReply);
	rpc DeleteQyWebComment (DeleteQyWebCommentRequest) returns (DeleteQyWebCommentReply);
	rpc GetQyWebComment (GetQyWebCommentRequest) returns (GetQyWebCommentReply);
	rpc ListQyWebComment (ListQyWebCommentRequest) returns (ListQyWebCommentReply){
		option (google.api.http) = {
			get: "/api/web/v1/comment",
		};
	};

}

message WebCommentInfoResponse {
	uint64 id = 1;
	int32 statusFlag = 2;
	uint64 agentId = 3;
	uint64 memberId = 4;
	string atMemberIds= 5;
	string agent= 6;
	string memberName= 7;
	string ip= 8;
	string email= 9;
	string url= 10;
	uint64 rootId= 11;
	string content= 12;
	string  attrs = 13;
	string parentUserName= 14;
	string objTitle= 15;
	string objLink= 16;
	string avatar= 17;
	google.protobuf.Timestamp createdAt = 18;
	int32 count = 19;
	int32 rootCount = 20;
}
message WebCommentPageInfo {
	int64 current = 1;
	int64 pageSize = 2;
	int64 total = 3;
	int64 pages = 4;
	bool firstFlag = 5;
	bool lastFlag = 6;
}

message CreateQyWebCommentRequest {
		uint64 agentId = 1;
		uint64 parentId = 2;
		string memberName = 3;
		string email = 4;
		string url = 5;
		string content = 6;
}
message CreateQyWebCommentReply {
	 uint64 id = 1;
}

message UpdateQyWebCommentRequest {}
message UpdateQyWebCommentReply {}

message DeleteQyWebCommentRequest {}
message DeleteQyWebCommentReply {}

message GetQyWebCommentRequest {}
message GetQyWebCommentReply {}

message ListQyWebCommentRequest {
	int64 current = 1;
	int64 pageSize = 2;
	int64 total = 3;
	int64 pages = 4;
	bool firstFlag = 5;
	bool lastFlag = 6;
	uint64 agentId = 7;
	uint64 rootId = 8;
}
message ListQyWebCommentReply {
	WebCommentPageInfo pageInfo = 1;
	int32 count = 2;
	repeated WebCommentInfoResponse items = 3;

}